--- a/Experience.html
+++ b/Experience.html
@@ -141,14 +141,14 @@
 										<a href="mailto:kumar.yashmallya@gmail.com">kumar.yashmallya@gmail.com</a>
 									</div>
 								</section>
-								<section>
+<!-- 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
 										<p>(+91) 995-434-9802<br>
 										(+91) 757-890-5707</p>
 									</div>
-								</section>
+								</section> -->
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
