--- a/education.html
+++ b/education.html
@@ -119,13 +119,13 @@
 								</form>
 							</section> -->
 							<section class="split">
-								<section>
+<!-- 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
 										<a href="mailto:kumar.yashmallya@gmail.com">kumar.yashmallya@gmail.com</a>
 									</div>
-								</section>
+								</section> -->
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
