--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 							<li><a href="Experience.html">Experience</a></li>
 							<li><a href="Projects.html">Projects</a></li>
 							<li><a href="Achievements.html">Achievements</a></li>
+							<li><a href="skill.html">Skills</a></li>
 							
 						</ul>
 						<!-- <ul class="actions stacked">
