--- a/Achievements.html
+++ b/Achievements.html
@@ -29,6 +29,7 @@
 							<li><a href="education.html">Education</a></li>
 							<li><a href="Experience.html">Experience</a></li>
 							<li><a href="Projects.html">Projects</a></li>
+							<li><a href="skill.html">Skills</a></li>
 							<!-- <li><a href="Achievements.html">Achievements</a></li> -->
 						</ul>
 						<!-- <ul class="actions stacked">
