--- a/education.html
+++ b/education.html
@@ -30,6 +30,7 @@
 							<li><a href="Experience.html">Experience</a></li>
 							<li><a href="Projects.html">Projects</a></li>
 							<li><a href="Achievements.html">Achievements</a></li>
+							<li><a href="skill.html">Skills</a></li>
 						</ul>
 						<!-- <ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
