--- a/skill.html
+++ b/skill.html
@@ -177,7 +177,7 @@
 
 								<li><a href="https://www.instagram.com/__baddu/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 
-								<li><a href="https://github.com/yakumm/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/yashmallya/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 
 								<li><a href="https://www.linkedin.com/in/yashmallya" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 
