--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 							<li><a href="Projects.html">Projects</a></li>
 							<li><a href="Achievements.html">Achievements</a></li>
 							<li><a href="skill.html">Skills</a></li>
+							<li><a href="https://drive.google.com/file/d/1CkZp7Pu6ZcRx7Jej5Mc6_IqEgt-p4T2f/view?usp=sharing">Resume</a></li>
 							
 						</ul>
 						<!-- <ul class="actions stacked">
