--- a/skill.html
+++ b/skill.html
@@ -181,8 +181,8 @@
 
 								<li><a href="https://www.linkedin.com/in/yashmallya" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 
-								<li><a href="https://drive.google.com/file/d/1CkZp7Pu6ZcRx7Jej5Mc6_IqEgt-p4T2f/view?usp=sharing">
-								<button style="font-size:9px"><span style="font-size: :12px">Resume</span> <i class="fa fa-file-pdf-o"></i></button></a></li>
+<!-- 								<li><a href="https://drive.google.com/file/d/1CkZp7Pu6ZcRx7Jej5Mc6_IqEgt-p4T2f/view?usp=sharing">
+								<button style="font-size:9px"><span style="font-size: :12px">Resume</span> <i class="fa fa-file-pdf-o"></i></button></a></li> -->
 							</ul>
 						
 						</div>
